# ProyectoServidoresWeb

./: Program.cs  catalogo_Turismo.sln  configdatabase.cs  data.cs
CatalogoTurismoF/: CatalogoTurismoF.csproj  CatalogoTurismoF.http  CatalogoTurismoF.sln  Program.cs  WeatherForecast.cs
CatalogoTurismoF/Context/: AppDbContext.cs
CatalogoTurismoF/Controllers/: ActividadsController.cs  PaquetesController.cs
CatalogoTurismoF/GraphQL/: CatalogoQuery.cs  CatalogoSchema.cs
CatalogoTurismoF/GraphQL-Types/: ActividadType.cs  PaqueteType.cs
CatalogoTurismoF/Interfaces/: IActividadServices.cs  IPaqueteServices.cs
CatalogoTurismoF/Migrations/: 20241023050742_Initial.Designer.cs  20241023050742_Initial.cs  AppDbContextModelSnapshot.cs
CatalogoTurismoF/Models/: Actividad.cs  Paquete.cs
CobroYCotizaciones/: ProyectoServidor.sql  boleto.py  database.py  itinerario.py  main.py  models.py  pago.py  reembolso.py  reservar_vuelo.py  schema.py  soporte.py  test_main.py  tokenAut.py
Login/: pom.xml
LoginyReserva/: pom.xml
LoginyReserva1/: pom.xml
LoginyReserva2/: package-lock.json  package.json
NotificacioneComentarios/: CMakeLists.txt  comentarios.cpp  notificacion.cpp
NotificacioneComentarios/include/: comentario.h  vuelo.h
NotificacioneComentarios/src/: comentarios.cpp  main.cpp  vuelo.cpp
catalogo_Agencia/: Program.cs  appsettings.json  catalogo_Agencia.csproj  data.cs
catalogotercercommit/: .env  README.md  package-lock.json  package.json
cobroycotizaciones2/: package-lock.json  package.json
proyectocatalogop2/: package-lock.json  package.json
(+100 files in other folders)
